--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Document</title>
+    <title>CSS integration</title>
 </head>
 <body>
-
+    <h1 style="color: blue; background-color: rgb(201, 250, 250); padding-left: 5px; margin: 0px;height:50px;">Homepage</h1>
 </body>
 </html>
