--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 <head>
     <title>CSS integration</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="body">
     <h1 style="color: blue; background-color: rgb(201, 250, 250); padding-left: 5px; margin: 0px;height:50px;">Homepage</h1>
+    <div class="navbar">
+        <a href="index.html" class="nav1">Home</a>
+        <a href="about.html" class="nav1">About</a>
+        <a href="contact.html" class="nav1">Contact</a>
+    </div>
 </body>
 </html>
