--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 <head>
     <title>CSS integration</title>
+    <style>
+        p{color: black;
+        background-color: rgb(201, 250, 250);
+        height: 80px;
+        width: 400px;
+        padding: 10px;
+        margin: 5px;
+        border-radius: 10px;
+        }
+    </style>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="body">
@@ -11,5 +21,10 @@
         <a href="about.html" class="nav1">About</a>
         <a href="contact.html" class="nav1">Contact</a>
     </div>
+    <p>
+        Hello, Everyone!
+        I have recently learned HTML & Now i am learning CSS (cascading style sheets)
+        Which is used style and design the webpages
+    </p>
 </body>
 </html>
